Fix Room Info text contrast

--- a/dark-mode.css
+++ b/dark-mode.css
@@ -276,6 +276,16 @@ body.dark-mode .rc-popover__title{
 	color: var(--popover-background);
 }
 
+/* Fix Notifications settings text contrast issue */
+body.dark-mode .rc-popover__item-radio-label {
+color: var(--color-white);
+}
+
+/* Fix Room info text contrast issue */
+body.dark-mode .rc-switch-double {
+color: var(--color-white);
+}
+
 body.dark-mode .rc-header--room {
 	box-shadow: 0px 0px 3px var(--color-dark-medium);
 }
